--- a/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/menu/settingMenu.html.twig
+++ b/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/menu/settingMenu.html.twig
@@ -13,6 +13,8 @@
 			<li><a href="{{path('Settings-manageTemplates')}}">Browse Templates</a></li>
 			<li><a href="{{path('Settings-newMenu')}}">new menu</a></li>
 			<li><a href="{{path('Settings-manageMenus')}}">manage menus</a></li>
+            <li class="nav-header">Account</li>
+			<li><a href="{{path('logout')}}">logout</a></li>
             <li class="nav-header">Debug</li>
 			<li><a href="{{path('Settings-getLog')}}">logs</a></li>
 			<li><a href="{{path('Settings-clearLog')}}">clear logs</a></li>
