--- a/src/Cms/WebSiteBundle/Resources/views/WebSite/default/settings/login.html.twig
+++ b/src/Cms/WebSiteBundle/Resources/views/WebSite/default/settings/login.html.twig
@@ -1,19 +1,68 @@
-{% if error %}
-    <div>{{ error.message }}</div>
-{% endif %}
+<head>
+	<title>Login</title>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+	<link rel="stylesheet" href="{{ app.request.getBaseURL() }}/bootstrap/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="{{ app.request.getBaseURL() }}/bootstrap/css/bootstrap-responsive.min.css" />
+	<script src="{{ app.request.getBaseURL() }}/bootstrap/js/bootstrap.min.js"></script>
+	<link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+      }
 
-<form action="{{ path('login_check') }}" method="post">
-    <label for="username">Login :</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+      .form-signin {
+        max-width: 300px;
+        padding: 19px 29px 29px;
+        margin: 0 auto 20px;
+        background-color: #fff;
+        border: 1px solid #e5e5e5;
+        -webkit-border-radius: 5px;
+           -moz-border-radius: 5px;
+                border-radius: 5px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+      }
+      .form-signin .form-signin-heading,
+      .form-signin .checkbox {
+        margin-bottom: 10px;
+      }
+      .form-signin input[type="text"],
+      .form-signin input[type="password"] {
+        font-size: 16px;
+        height: auto;
+        margin-bottom: 15px;
+        padding: 7px 9px;
+      }
 
-    <label for="password">Mot de passe :</label>
-    <input type="password" id="password" name="_password" />
+    </style>
 
-    {#
-        Si vous voulez contrôler l'URL vers laquelle l'utilisateur est redirigé en cas de succès
-        (plus de détails ci-dessous)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
+</head>
+</body>
+	<div class="container">
+	<form action="{{ path('login_check') }}" method="post" class="form-signin">
+		
+		<h2 class="form-signin-heading">Login</h2>
+		{% if error %}
+			
+			<div class="alert alert-block alert-error fade in">{{ error.message }}</div>
+		{% endif %}
 
-    <button type="submit">login</button>
-</form>
+		<input type="text" id="username" name="_username"  placeholder="username"  class="input-block-level" />
+
+		<input type="password" id="password" name="_password" class="input-block-level" placeholder="Password" />
+
+		{#
+			Si vous voulez contrôler l'URL vers laquelle l'utilisateur est redirigé en cas de succès
+			(plus de détails ci-dessous)
+			<input type="hidden" name="_target_path" value="/account" />
+		#}
+
+		<button type="submit" class="btn btn-large btn-primary" >login</button>
+	</form>
+	</div>
+</body>
