--- a/src/Cms/WebSiteBundle/Resources/views/WebSite/default/settings/templates/templateSettings.html.twig
+++ b/src/Cms/WebSiteBundle/Resources/views/WebSite/default/settings/templates/templateSettings.html.twig
@@ -9,6 +9,12 @@
 	<div class="hero-unit">
 		<h1>{{ cms_page_title }}</h1>
 	</div>
+	{% for flashMessage in app.session.flashbag.get('validation') %}
+	<div class="alert alert-success">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		{{ flashMessage }}
+	</div>
+	{% endfor %}
 	<div class="row-fluid">
 		{% include "CmsWebSiteBundle:WebSite:default/settings/templates/"~fileName~".html.twig" %}	
 	</div>
