--- a/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/menu/adminTopBar.html.twig
+++ b/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/menu/adminTopBar.html.twig
@@ -1,6 +1,6 @@
 {% if app.user %}
 	{% set controller = app.request.attributes.get("_controller")|split('::')[1] %}
-	{% if controller == "newPageAction" %}
+	{% if ( controller == "newPageAction" )or ( controller == "editPagesAction" ) %}
 		<div class="navbar navbar-inverse navbar-fixed-bottom">
 		  <div class="navbar-inner">
 			<div class="container">
