--- a/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/menu/settingMenu.html.twig
+++ b/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/menu/settingMenu.html.twig
@@ -5,6 +5,8 @@
             <li class="nav-header">Pages</li>
 			<li><a href="{{path('Settings-newPage')}}">New Page</a></li>
 			<li><a href="{{path('Settings-browsePages')}}">Browse Pages</a></li>
+			<li><a href="{{path('Settings-newCategory')}}">New Category</a></li>
+			<li><a href="{{path('Settings-manageCategories')}}">Manage Categories</a></li>
             <li class="nav-header">Images</li>
 			<li><a href="{{path('Uploads-uploadImage')}}">Upload an image</a></li>
 			<li><a href="{{path('Uploads-browseImage')}}">Browse images</a></li>
