--- a/src/Cms/WebSiteBundle/Resources/views/WebSite/default/settings/user/newUserForm.html.twig
+++ b/src/Cms/WebSiteBundle/Resources/views/WebSite/default/settings/user/newUserForm.html.twig
@@ -1,4 +1,9 @@
-
+{% for flashMessage in app.session.flashbag.get('error') %}
+	<div class="alert alert-success">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		{{ flashMessage }}
+	</div>
+{% endfor %}
 	<form method="POST" {{ form_enctype(form) }} id="form">
 	{{ form(form) }}
 	</form>
