--- a/app/Resources/views/settings.html.twig
+++ b/app/Resources/views/settings.html.twig
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="{{ app.request.getBaseURL() }}/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="{{ app.request.getBaseURL() }}/bootstrap/css/bootstrap-responsive.min.css" />
 	<script src="{{ app.request.getBaseURL() }}/bootstrap/js/bootstrap.min.js"></script>
+	<script src="{{ app.request.getBaseURL() }}/bootstrap/bootbox/bootbox.min.js"></script>
 	
     {% block stylesheets %}
     {% endblock %}
