--- a/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/includes.html.twig
+++ b/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/includes.html.twig
@@ -13,14 +13,13 @@
 	<link rel="stylesheet" href="{{ app.request.getBaseURL() }}/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="{{ app.request.getBaseURL() }}/bootstrap/css/bootstrap-responsive.min.css" />
 	<script src="{{ app.request.getBaseURL() }}/bootstrap/js/bootstrap.min.js"></script>
+
 	<script>
-	google.load("jquery", "1.3.2");
-	
-	if (jQuery.ui) {
-		console.log("JQuery UI already loaded");
-	}else{
-		google.load("jqueryui", "1.7.2");	
-	}
+	google.load("jquery", "1.4.2");
+	google.load("jqueryui", "1.7.2");
+	</script>
+
+	<script>
 	
 	$(document).ready(function(){
 			localStorage.removeItem("for");
@@ -35,7 +34,6 @@
 				setSettingsDialog();
 			});
 		
-			
 	}); 
 	
 	
