--- a/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/menu/adminTopBar.html.twig
+++ b/src/Cms/WebSiteBundle/Resources/views/WebSite/default/includes/menu/adminTopBar.html.twig
@@ -1,13 +1,17 @@
 {% if is_granted("ROLE_ADMIN") %}
 	{% set controller = app.request.attributes.get("_controller")|split('::')[1] %}
-	{% if ( controller == "newPageAction" )or ( controller == "editPagesAction" ) %}
+	{% if ( controller == "newPageAction" )or ( controller == "editPagesAction" ) or ( controller == "changeTemplateAction" ) %}
 		<div class="navbar navbar-inverse navbar-fixed-bottom">
 		  <div class="navbar-inner">
 			<div class="container">
 			  <a class="brand" href="./index.html">Admin Pannel</a>
 			  <div class="nav-collapse collapse">
 				<ul class="nav">
-					{% include 'CmsWebSiteBundle:WebSite:default/includes/newPageForm.html.twig' %}
+				{% if (app.request.attributes.get('_route') == "Settings-newPage") or (app.request.attributes.get('_route') == "Settings-editPage") %}
+					{% include 'CmsWebSiteBundle:WebSite:default/includes/newPageForm.html.twig' %}	
+				{% elseif app.request.attributes.get('_route') == "Settings-changeTemplate" %}
+					{% include "CmsWebSiteBundle:WebSite:default/includes/changeTemplate.html.twig" %}
+				{% endif %}
 				</ul>
 			  </div>
 			</div>
